Chrome overflow bug fix
Bug occurs when opening dev tools...

--- a/src/client/styles/main-view.scss
+++ b/src/client/styles/main-view.scss
@@ -20,6 +20,7 @@
       flex: 1 1 auto;
       padding-left: 5px;
       padding-right: 5px;
+      overflow-x: hidden;
       overflow-y: scroll;
       width: 0;
     }
